tests/ui/dropck/dropck-after-failed-type-lowering.stderr
error[E0107]: missing generics for associated type `B::C`
  --> $DIR/dropck-after-failed-type-lowering.rs:11:25
   |
LL |     h: Option<<G as B>::C>,
   |                         ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/dropck-after-failed-type-lowering.rs:4:10
   |
LL |     type C<'a>;
   |          ^ --
help: add missing lifetime argument
   |
LL |     h: Option<<G as B>::C<'a>>,
   |                          ++++

error[E0277]: the trait bound `G: B` is not satisfied
  --> $DIR/dropck-after-failed-type-lowering.rs:11:8
   |
LL |     h: Option<<G as B>::C>,
   |        ^^^^^^^^^^^^^^^^^^^ the trait `B` is not implemented for `G`
   |
help: consider restricting type parameter `G` with trait `B`
   |
LL | struct F<G: B> {
   |           +++

error[E0277]: the trait bound `E: B` is not satisfied
  --> $DIR/dropck-after-failed-type-lowering.rs:5:18
   |
LL |     fn d<E>() -> F<E> {
   |                  ^^^^ the trait `B` is not implemented for `E`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0277.
For more information about an error, try `rustc --explain E0107`.
